# portal-cube

./: CMakeLists.txt  README.md  main.cpp
include/: shader.h  types.h
libs/: glad.c
libs/include/glad/: glad.h
shaders/: default.frag
src/: shader.cpp
